# plc

./: .gitignore  CMakeLists.txt  Makefile  README.md  back  compiler  compiler.cpp  fibo.tc  front
_build/: .digest-db  log
_build/default/.dune/: configurator.v2
_build/default/lib/: lexer.ml  parser.mli  parser__mock.ml.mock  parser__mock.mli.inferred  toyc_lib.cmxa  toyc_lib.ml-gen
_build/default/lib/.merlin-conf/: lib-toyc_lib
_build/default/lib/.toyc_lib.objs/byte/: toyc_lib.cmi  toyc_lib.cmo  toyc_lib.cmt  toyc_lib__Ast.cmo  toyc_lib__Ast.cmt  toyc_lib__Lexer.cmo  (+4 more)
cpp/: .gitignore  Makefile  README.md
cpp/src/: ASTNode.h  ASTParser.cpp  ASTParser.h  Generator.cpp  Generator.h  RegManager.cpp  RegManager.h  main.cpp
cpp/test/: code.ast  control.ast  example.ast  scope.ast  shadow.ast
lib/: dune  lexer.mll
tests/: 15_multiple_return_paths.tc  17_complex_expressions.tc  19_many_arguments.tc  20_comprehensive.tc  f17_complex_expression.tc  f20_comprehensive.tc  shadow.tc  test.tc
tests/semantic_test/: main.tc  returns.tc
tests/syntax_test/: basic.ast  control.ast
toyc-interpreter/: README.md  dune-project
toyc-interpreter/_build/: .db
toyc-interpreter/_build/default/.dune/: configurator
toyc-interpreter/_build/default/lib/: parser.ml  toyc_lib.cma  toyc_lib.cmxs
toyc-interpreter/lib/: ast.ml  lexer.mll  parser.mly
toyc-interpreter/tests/: lexbuf.ast  lexbuf.tc  test.tc
toyc-interpreter/tests/semantic_test/: errors.ast  errors.tc
toyc-interpreter/tests/syntax_test/: basic.tc  control.tc  functions.ast  functions.tc  scope.ast  scope.tc
(+9 files in other folders)
